--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,6 @@
     background-color: black;
     color: aliceblue;
     font-family: 'Courier New', Courier, monospace;
-    font-weight: 800;
 }
 #h1 {
     background-color: aquamarine;
@@ -13,7 +12,7 @@
 }
 #h3 {
     background-color: aquamarine;
-    font-size: 24px;
+    font-size: 28px;
     font-weight: 600;
     text-align: center;
     color: black;
@@ -31,7 +30,12 @@
     font-size: medium;
     font-weight: 800;
 }
+.steps,
+.list,
 .desc {
     font-size: medium;
     font-weight: 800;
+}
+.big {
+    font-size: 20px;
 }
