--- a/styles.css
+++ b/styles.css
@@ -26,16 +26,29 @@
     
 }
 .links {
-    color: rgb(11, 11, 216);
-    font-size: medium;
+    background-color: papayawhip;
+    border: none;
+    color: purple;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display:inline-block;
+    font-size: 16px;
     font-weight: 800;
+    margin: 4px 2px;
+    cursor: pointer;
 }
 .steps,
 .list,
 .desc {
     font-size: medium;
     font-weight: 800;
+    display: inline-block;
+
 }
 .big {
     font-size: 20px;
+}
+.inv {
+    display: none;
 }
